REGRESSION (r293703): 358 JSC tests failing https://bugs.webkit.org/show_bug.cgi?id=240023

Reviewed by Yusuke Suzuki.

Make sure WTF::initialize() calls AtomString::init() given that JSC now relies on
emptyAtom().

* Tools/TestWebKitAPI/TestsController.cpp:
(TestWebKitAPI::TestsController::TestsController):
* Source/WTF/wtf/Threading.cpp:
(WTF::initialize):
* Source/WTF/wtf/text/AtomString.cpp:
(WTF::AtomString::init):
* Source/WebCore/platform/CommonAtomStrings.cpp:
(WebCore::initializeCommonAtomStrings):

Canonical link: https://commits.webkit.org/250223@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293735 268f45cc-cd09-0410-ab3c-d52691b4dbfc